православни-скочко/скочко.output
Terminals unused in grammar

    _ENTER


Grammar

    0 $accept: program $end

    1 program: znakovi_pre_pocetka igra _KRAJ

    2 znakovi_pre_pocetka: %empty
    3                    | znakovi_pre_pocetka _KRAJ
    4                    | znakovi_pre_pocetka _ZNAK

    5 $@1: %empty

    6 igra: _NOVA_IGRA $@1 lista_kombinacija

    7 $@2: %empty

    8 igra: igra _NOVA_IGRA $@2 lista_kombinacija

    9 lista_kombinacija: %empty
   10                  | kombinacija

   11 kombinacija: _ZNAK
   12            | kombinacija _ZNAK


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    _ENTER (258)
    _NOVA_IGRA (259) 6 8
    _KRAJ (260) 1 3
    _ZNAK <i> (261) 4 11 12


Nonterminals, with rules where they appear

    $accept (7)
        on left: 0
    program (8)
        on left: 1
        on right: 0
    znakovi_pre_pocetka (9)
        on left: 2 3 4
        on right: 1 3 4
    igra (10)
        on left: 6 8
        on right: 1 8
    $@1 (11)
        on left: 5
        on right: 6
    $@2 (12)
        on left: 7
        on right: 8
    lista_kombinacija (13)
        on left: 9 10
        on right: 6 8
    kombinacija (14)
        on left: 11 12
        on right: 10 12


State 0

    0 $accept: . program $end

    $default  reduce using rule 2 (znakovi_pre_pocetka)

    program              go to state 1
    znakovi_pre_pocetka  go to state 2


State 1

    0 $accept: program . $end

    $end  shift, and go to state 3


State 2

    1 program: znakovi_pre_pocetka . igra _KRAJ
    3 znakovi_pre_pocetka: znakovi_pre_pocetka . _KRAJ
    4                    | znakovi_pre_pocetka . _ZNAK

    _NOVA_IGRA  shift, and go to state 4
    _KRAJ       shift, and go to state 5
    _ZNAK       shift, and go to state 6

    igra  go to state 7


State 3

    0 $accept: program $end .

    $default  accept


State 4

    6 igra: _NOVA_IGRA . $@1 lista_kombinacija

    $default  reduce using rule 5 ($@1)

    $@1  go to state 8


State 5

    3 znakovi_pre_pocetka: znakovi_pre_pocetka _KRAJ .

    $default  reduce using rule 3 (znakovi_pre_pocetka)


State 6

    4 znakovi_pre_pocetka: znakovi_pre_pocetka _ZNAK .

    $default  reduce using rule 4 (znakovi_pre_pocetka)


State 7

    1 program: znakovi_pre_pocetka igra . _KRAJ
    8 igra: igra . _NOVA_IGRA $@2 lista_kombinacija

    _NOVA_IGRA  shift, and go to state 9
    _KRAJ       shift, and go to state 10


State 8

    6 igra: _NOVA_IGRA $@1 . lista_kombinacija

    _ZNAK  shift, and go to state 11

    $default  reduce using rule 9 (lista_kombinacija)

    lista_kombinacija  go to state 12
    kombinacija        go to state 13


State 9

    8 igra: igra _NOVA_IGRA . $@2 lista_kombinacija

    $default  reduce using rule 7 ($@2)

    $@2  go to state 14


State 10

    1 program: znakovi_pre_pocetka igra _KRAJ .

    $default  reduce using rule 1 (program)


State 11

   11 kombinacija: _ZNAK .

    $default  reduce using rule 11 (kombinacija)


State 12

    6 igra: _NOVA_IGRA $@1 lista_kombinacija .

    $default  reduce using rule 6 (igra)


State 13

   10 lista_kombinacija: kombinacija .
   12 kombinacija: kombinacija . _ZNAK

    _ZNAK  shift, and go to state 15

    $default  reduce using rule 10 (lista_kombinacija)


State 14

    8 igra: igra _NOVA_IGRA $@2 . lista_kombinacija

    _ZNAK  shift, and go to state 11

    $default  reduce using rule 9 (lista_kombinacija)

    lista_kombinacija  go to state 16
    kombinacija        go to state 13


State 15

   12 kombinacija: kombinacija _ZNAK .

    $default  reduce using rule 12 (kombinacija)


State 16

    8 igra: igra _NOVA_IGRA $@2 lista_kombinacija .

    $default  reduce using rule 8 (igra)
